# git-id

./: Cargo.toml  README.md  git-id  install.sh
.github/workflows/: release.yml
src/: cli.rs  config.rs  git.rs  main.rs  models.rs  ssh.rs  ui.rs
src/commands/: add.rs  completions.rs  list.rs  mod.rs  remove.rs  ssh.rs  status.rs  use_cmd.rs
